[package]
name = "DB"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2", "numeric"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = "0.29.1"
tokio = {version = "1.43.0", features = ["full", "time"] }
serde_json = "1.0.139"
bigdecimal = { version = "0.4.7", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.7"